--- a/src/main/resources/templates/clientes/ver.html
+++ b/src/main/resources/templates/clientes/ver.html
@@ -30,10 +30,13 @@
                             <div class="card-body">
                                 <!-- Avatar y nombre -->
                                 <div class="text-center mb-4">
+									<!--
                                     <div class="user-avatar mx-auto mb-3" 
                                          style="width:80px;height:80px;font-size:2rem;"
                                          th:style="${cliente.activo} ? 'background-color: var(--success-color)' : 'background-color: var(--danger-color)'"
-                                         th:text="${cliente.nombre.substring(0,1).toUpperCase()}">C</div>
+                                         th:text="${cliente.nombre.substring(0,1).toUpperCase()}">C
+									</div>
+									-->
                                     <h4 th:text="${cliente.nombreCompleto}">Nombre</h4>
                                     <p class="text-muted mb-0">
                                         <i class="bi bi-card-text me-1"></i>DNI: 
