--- a/src/main/resources/templates/reportes/prestamos-vencidos.html
+++ b/src/main/resources/templates/reportes/prestamos-vencidos.html
@@ -40,9 +40,14 @@
                 <div class="table-container">
                     <div class="table-header">
                         <h5><i class="bi bi-table me-2"></i>Detalle de Préstamos Vencidos</h5>
-                        <a th:href="@{/reportes}" class="btn btn-outline-secondary btn-sm">
-                            <i class="bi bi-arrow-left me-1"></i>Volver
-                        </a>
+                        <div>
+                            <a th:href="@{/reportes/prestamos-vencidos/pdf}" class="btn btn-danger btn-sm me-2">
+                                <i class="bi bi-file-earmark-pdf me-1"></i>Exportar PDF
+                            </a>
+                            <a th:href="@{/reportes}" class="btn btn-outline-secondary btn-sm">
+                                <i class="bi bi-arrow-left me-1"></i>Volver
+                            </a>
+                        </div>
                     </div>
                     <div class="table-responsive">
                         <table class="table table-custom mb-0">
