--- a/src/main/resources/templates/reportes/prestamos-vencidos.html
+++ b/src/main/resources/templates/reportes/prestamos-vencidos.html
@@ -41,6 +41,9 @@
                     <div class="table-header">
                         <h5><i class="bi bi-table me-2"></i>Detalle de Préstamos Vencidos</h5>
                         <div>
+                            <a th:href="@{/reportes/prestamos-vencidos/excel}" class="btn btn-success btn-sm me-2">
+                                <i class="bi bi-file-earmark-excel me-1"></i>Exportar Excel
+                            </a>
                             <a th:href="@{/reportes/prestamos-vencidos/pdf}" class="btn btn-danger btn-sm me-2">
                                 <i class="bi bi-file-earmark-pdf me-1"></i>Exportar PDF
                             </a>
